--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
     <parent>
         <groupId>org.alfresco</groupId>
         <artifactId>alfresco-super-pom</artifactId>
-        <version>10</version>
+        <version>12</version>
     </parent>
 
     <scm>
@@ -34,13 +34,12 @@
         <version.edition>Enterprise</version.edition>
         <image.tag>latest</image.tag>
 
-        <dependency.alfresco-enterprise-remote-api.version>8.109</dependency.alfresco-enterprise-remote-api.version>
-        <dependency.alfresco-enterprise-repository.version>8.113</dependency.alfresco-enterprise-repository.version>
-        <dependency.alfresco-remote-api.version>8.139</dependency.alfresco-remote-api.version>
-        <dependency.alfresco-repository.version>8.148</dependency.alfresco-repository.version>
-        <dependency.alfresco-data-model.version>8.99</dependency.alfresco-data-model.version>
-
-        <dependency.alfresco-core.version>8.27</dependency.alfresco-core.version>
+        <dependency.alfresco-enterprise-remote-api.version>repo-4901-1</dependency.alfresco-enterprise-remote-api.version>
+        <dependency.alfresco-enterprise-repository.version>repo-4901-1</dependency.alfresco-enterprise-repository.version>
+        <dependency.alfresco-remote-api.version>repo-4901-1</dependency.alfresco-remote-api.version>
+        <dependency.alfresco-repository.version>repo-4901-18</dependency.alfresco-repository.version>
+        <dependency.alfresco-data-model.version>repo-4901-1</dependency.alfresco-data-model.version>
+        <dependency.alfresco-core.version>repo-4901-1</dependency.alfresco-core.version>
 
         <dependency.alfresco-hb-data-sender.version>1.0.12</dependency.alfresco-hb-data-sender.version>
         <dependency.activiti-repo-connector.version>1.3</dependency.activiti-repo-connector.version>
