--- a/pom.xml
+++ b/pom.xml
@@ -37,7 +37,7 @@
         <dependency.alfresco-enterprise-remote-api.version>repo-4901-1</dependency.alfresco-enterprise-remote-api.version>
         <dependency.alfresco-enterprise-repository.version>repo-4901-1</dependency.alfresco-enterprise-repository.version>
         <dependency.alfresco-remote-api.version>repo-4901-1</dependency.alfresco-remote-api.version>
-        <dependency.alfresco-repository.version>repo-4901-18</dependency.alfresco-repository.version>
+        <dependency.alfresco-repository.version>repo-4901-1/dependency.alfresco-repository.version>
         <dependency.alfresco-data-model.version>repo-4901-1</dependency.alfresco-data-model.version>
         <dependency.alfresco-core.version>repo-4901-1</dependency.alfresco-core.version>
 
